Fixed margin issue on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -102,7 +102,6 @@ h1,
   user-select: none;
   overflow: visible;
   border: 1px solid var(--accent-aqua);
-  margin: 20px 0px;
 }
 
 .animated-tiles-grid {
